--- a/jc-club-auth/jc-club-auth-common/pom.xml
+++ b/jc-club-auth/jc-club-auth-common/pom.xml
@@ -110,6 +110,12 @@
             <artifactId>commons-pool2</artifactId>
         </dependency>
 
+        <dependency>
+            <groupId>com.google.code.gson</groupId>
+            <artifactId>gson</artifactId>
+            <version>2.8.9</version>
+        </dependency>
+
     </dependencies>
 
 </project>
